[package]
    name = "cordy"
    version = "0.1.0"
    edition = "2018"

[dependencies]
    lazy_static = "1.4.0"
    rustyline = "11.0.0"
    num-integer = "0.1.45"
    num-complex = "0.4.3"
    itertools = "0.10.5"
    indexmap = "1.9.2"
    fancy-regex = "0.11.0"

#[profile.release]
#    debug = true