[package]
    name = "cordy-sys"
    version = "0.1.5"
    edition = "2021"

[features]
    trace_parser = []
    trace_interpreter = []
    trace_interpreter_stack = []

[dependencies]
    num-integer = "0.1.45"
    num-complex = "0.4.3"
    itertools = "0.10.5"  # Criterion already depends on 0.10, and avoiding duplicate dependencies > bumping to >0.10
    indexmap = "2.0.0"
    fancy-regex = "0.11.0"
    fxhash = "0.2.1"

[dev-dependencies]
    criterion = "0.5.1"

[[bench]]
    name = "vm"
    harness = false