[package]
    name = "cordy-web"
    version = "0.1.0"
    edition = "2021"

[lib]
    crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
    cordy-sys = { version = "0.1.0", path = "../cordy-sys" }
    wasm-bindgen = "0.2.84"
    console_error_panic_hook = "0.1.7"