[package]
    name = "cordy"
    version = "0.1.0"
    edition = "2021"

[dependencies]
    cordy-sys = { path = "../cordy-sys" }
    rustyline = "12.0.0"
    mimalloc = { version = "0.1.37", default-features = false }
    libloading = "0.8.0"
    indexmap = "2.0.0"
    fxhash = "0.2.1"

[dev-dependencies]
    cordy-test = { path = "../cordy-test" }
    criterion = "0.5.1"

[[bench]]
    name = "vm"
    harness = false
